tests/errors/interface_not_interface.dang
# Test implementing a non-interface type

type NotAnInterface {
  foo: String!
}

type Person implements NotAnInterface {
  name: String!
}
